Fix context-menu overflow modpack library page

--- a/resources/styles/main.css
+++ b/resources/styles/main.css
@@ -510,6 +510,7 @@
 }
 
 #modpack-page {
+    overflow-x: hidden;
     height: calc(100% - 52px);
 }
 
